--- a/git/20240112.md
+++ b/git/20240112.md
@@ -1,49 +1,54 @@
 # git 개념 & git 기본 명령어
 ## 개념
-
 working directory(local, 내 컴퓨터)  
 staging area(무대, 가상의 공간)  
 repository(github, 저장소)
+
 ---
 ## 기본 명령어
 
-### git add
-(local에 있는 파일을 stage에 추가한다)
+### git add  
+: local에 있는 자료의 '변경사항'을 'stage'에 추가한다
 
-### git commit
-: stage에 올라간 파일에 쪽지를 적는다
+### git commit  
+: stage에 올라간 '변경사항'에 쪽지/메모를 남긴다  
+***주의** : 좋은 commit message를 쓰자
 
-### git push
+### git push  
 : stage에 올라와있는 파일을 저장소로 옮긴다  
 주의 : add, commit 없이 push 불가능
+
+### git pull  
+: repository에서 local로 '변경 사항'을 가져온다.
+
+### git clone
+: repository에서 local로 그대로 가져온다  
+
+**주의 : 부모/ 자식 모두 git 저장소가 있다면 git 꼬일 가능성 높음**
+
 ---
-### git pull
-(저장소는 있는데 업데이트 필요할 때 사용)
-
-clone
-(저장소 자체가 없는 상태에서 사용)
-
-부모/ 자식 모두 git 저장소가 있다면 git 꼬일 가능성 높음
 
 *master << 현재 위치
 
-branch
+### git branch
+
+---
+# 협업 git 과정
+## fork -> 
 
 pull request
+
+# 개발 시작 mindset
+1. 무한대로 늘려서 생각해봐라.
 
 1. 10,000개로 늘려서 생각해봐라 -> git add .
 git reset HEAD [file]
 git commit --amend
 
-add : local에 있는 자료의 '변경사항'을 'stage'에 추가한다
-commit : stage에 올라간 '변경사항'에 쪽지/메모를 남긴다
-push : 
-
-좋은 commit message를 쓰자
-
-git pull : repository에서 local로 '변경 사항'을 가져온다
-git clone : repository에서 local로 그대로 가져온다
 
 34. 새 폴더 파서 git clone 다시 받기 or  pull
 -> 파일의 크기가 크면 clone 시간 오래 걸릴 수 있음
 -> but, 파일의 크기 작으면  좋은 방법 될 수도 있음
+
+---
+
